  margins independently (suggestion by someone who's annoyed).

- Data passed into Flot is now copied to a new canonical format to
  enable further processing before it hits the drawing routines. As a
  side-effect, this should make Flot more robust in the face of bad
  data (and fixes issue 112).

- Step-wise charting: line charts have a new option "steps" that when
  set to true connects the points with steps instead of diagonal lines. 
  

Bug fixes:

- Fixed two corner-case bugs when drawing filled curves (report and
  analysis by Joshua Varner).
- Fix auto-adjustment code when setting min to 0 for an axis where the
  dataset is completely flat on that axis (report by chovy).
- Fixed a bug with passing in data from getData to setData when the
  secondary axes are used (issue 65, reported by nperelman).
- Fixed so that it is possible to turn lines off when no other chart
  type is shown (based on problem reported by Glenn Vanderburg), and
  fixed so that setting lineWidth to 0 also hides the shadow (based on
  problem reported by Sergio Nunes).
- Updated mousemove position expression to the latest from jQuery (bug
  reported by meyuchas).
- Use borders instead of background in legend (fix printing issue 25
  and 45).
- Explicitly convert axis min/max to numbers.
- Fixed a bug with drawing marking lines with different colors
  (reported by Khurram).
- Fixed a bug with returning y2 values in the selection event (fix
  by exists, issue 75).
- Only set position relative on placeholder if it hasn't already a
  position different from static (reported by kyberneticist, issue 95).
- Don't round markings to prevent sub-pixel problems (reported by Dan
  Lipsitt).
- Make the grid border act similarly to a regular CSS border, i.e.
  prevent it from overlapping the plot itself. This also fixes a
  problem with anti-aliasing when the width is 1 pixel (reported by
  Anthony Ettinger).
- Imported SVN version of excanvas and fixed an issue with the newer